src/main/java/semantic/abstractSintaxTree/test/failing/returnInConstructor.ru
/? ReturnInConstructorException
struct A {}
impl A{
    .(){
        ret new A();
    }
}

start{}